# weight_compression

./: .gitignore  CLAUDE.md  requirements.txt
text-to-lora/: .gitignore  .pre-commit-config.yaml  README.md  mse.ipynb  nohup.out  pyproject.toml  setup.py  watcher.py
text-to-lora/configs/: hyper_lora_decontam_lol_tasks.yaml  lora_gsm8k.yaml
text-to-lora/scripts/: eval_base_models.sh  eval_baseline_loras.sh  eval_compnet_checkpoint.py  eval_compnet_checkpoint.sh  eval_hyperdecoders_checkpoint.py  eval_hypermod_checkpoint.py  eval_quantized_lora.py  eval_quantized_lora.py#  eval_quantized_lora.sh  eval_quantized_lora1.sh  eval_quantized_lora2.sh  eval_quantized_lora3.sh  generate_lora.py  run_eval.py  test.py  train_custom_sft.py  train_hyper_recon.py  train_hyperdecoders_mistral.sh  train_lora_baselines.py  train_lora_baselines.sh  train_mt_lora_baselines.sh  train_nwc_recon.ipynb  train_nwc_recon.py  train_nwc_recon.sh  train_t2l_gemma.sh  train_t2l_llama.sh  train_t2l_mistral.sh
text-to-lora/src/fishfarm/: __init__.py  pyproject.toml  tox.ini
text-to-lora/src/hyper_llm_modulator/: comp_lora.py  comp_lora_v2.py  comp_lora_v3.py  comp_lora_v4.py  comp_lora_v5.py  configs.py  data.py  hooks.py  hpyer_simple.py.py  hyper_modulator.py  lora_mixing.py  recon_trainer.py  recon_trainer_nwc.py  res_aggregator.py  sft_trainer.py  vllm_eval.py
text-to-lora/tasks/arc_challenge/: metadata.yaml
text-to-lora/tasks/arc_easy/: metadata.yaml
text-to-lora/tasks/hellaswag/: metadata.yaml
text-to-lora/tasks/humaneval/: metadata.yaml
text-to-lora/webui/: app.py
(+9561 files in other folders)
